# cv4ar

./: CMakeLists.txt  LICENSE  README.md
data/: webcam.xml
src/: contours.cpp  correspondences.cpp  detection.cpp  edges.cpp  filtering.cpp  homography.cpp  keypoints.cpp  marker.cpp  marker.h  pose.cpp  ransac.cpp  threshold.cpp
